Added OS detection in makefile for cppSource

--- a/cppSource/makefile
+++ b/cppSource/makefile
@@ -1,10 +1,26 @@
+ifeq ($(OS),Windows_NT)
+    uname_S := Windows
+else
+    uname_S := $(shell uname -s)
+endif
+
+ifeq ($(uname_S), Windows)
+    TARGETS = 3DPOD.exe
+endif
+ifeq ($(uname_S), Linux)
+    TARGETS = 3DPOD.out
+endif
+#ifeq ($(uname_S), .....) #See https://stackoverflow.com/a/27776822/938111
+#    target = .....
+#endif
+
 IDIR    := ../testCase/eigen/
 TEST_DIR:= ../testCase/
 CC      := g++
-CCFLAGS :=-std=c++11 -I$(IDIR)
+CCFLAGS :=-std=c++11 -I$(IDIR) -O3 -g
 LDFLAGS :=
 
-TARGETS := 3DPOD.out
+#TARGETS := 3DPOD.out
 
 .PHONY: all clean install_to_test
 
@@ -14,8 +30,7 @@ clean:
 	rm -f $(TARGETS)
 
 install_to_test: all
-	install ./3DPOD.out $(TEST_DIR)
- 
+	install $(TARGETS) $(TEST_DIR)
 
 $(TARGETS): 3DPOD.cpp
 	$(CC) -o $@ $^ $(CCFLAGS)
