--- a/cppSource/makefile
+++ b/cppSource/makefile
@@ -18,7 +18,7 @@ IDIR    := ../testCase/eigen/ ./depends/ezOptionParser/
 TEST_DIR:= ../testCase/
 CC      := g++
 # Substitiutions used below. See https://www.gnu.org/software/make/manual/html_node/Substitution-Refs.html
-CCFLAGS :=-std=c++11 $(IDIR:%=-I%) -O3 -g 
+CCFLAGS :=-std=c++11 $(IDIR:%=-I%) -O3
 LDFLAGS :=
 
 #TARGETS := 3DPOD.out
